Fix link width overflowing expected range

--- a/src/components/Footer/styles.module.less
+++ b/src/components/Footer/styles.module.less
@@ -26,6 +26,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  width: fit-content;
 }
 
 .globalFooterSubtext {
